--- a/SGT Transport/SGT Transport.vbproj
+++ b/SGT Transport/SGT Transport.vbproj
@@ -912,6 +912,18 @@
     <Compile Include="CONTABILIDAD\FrmPolizaGastos.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="CONTABILIDAD\FrmPolizaDiesel.designer.vb">
+      <DependentUpon>FrmPolizaDiesel.vb</DependentUpon>
+    </Compile>
+    <Compile Include="CONTABILIDAD\FrmPolizaDiesel.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CONTABILIDAD\FrmPolizaIngresosCxC.designer.vb">
+      <DependentUpon>FrmPolizaIngresosCxC.vb</DependentUpon>
+    </Compile>
+    <Compile Include="CONTABILIDAD\FrmPolizaIngresosCxC.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="CONTABILIDAD\FrmPolizaLiq.designer.vb">
       <DependentUpon>FrmPolizaLiq.vb</DependentUpon>
     </Compile>
@@ -4644,6 +4656,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CONTABILIDAD\FrmPolizaGastos.resx">
       <DependentUpon>FrmPolizaGastos.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CONTABILIDAD\FrmPolizaDiesel.resx">
+      <DependentUpon>FrmPolizaDiesel.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CONTABILIDAD\FrmPolizaIngresosCxC.resx">
+      <DependentUpon>FrmPolizaIngresosCxC.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CONTABILIDAD\FrmPolizaLiq.resx">
       <DependentUpon>FrmPolizaLiq.vb</DependentUpon>
