Hasta póliza de fondo de operadores

--- a/SGT Transport/SGT Transport.vbproj
+++ b/SGT Transport/SGT Transport.vbproj
@@ -237,9 +237,8 @@
     <Reference Include="FirebirdSql.Data.FirebirdClient">
       <HintPath>packages\FirebirdSql.Data.FirebirdClient.6.1.0\lib\netstandard1.6\FirebirdSql.Data.FirebirdClient.dll</HintPath>
     </Reference>
-    <Reference Include="itextsharp, Version=5.5.1.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Debug\itextsharp.dll</HintPath>
+    <Reference Include="itextsharp">
+      <HintPath>..\..\..\..\MONTELLANO\Transport CG\Transport CG\Transport CG\bin\x64\Debug\itextsharp.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>packages\Microsoft.Bcl.AsyncInterfaces.5.0.0\lib\net461\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
@@ -318,7 +317,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\Program Files (x86)\Stimulsoft\Stimulsoft Reports 2017.1.3\Libs\Net\Stimulsoft.Report.Win.dll</HintPath>
     </Reference>
-    <Reference Include="System" />
+    <Reference Include="System">
+      <HintPath>..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.7.2\System.dll</HintPath>
+    </Reference>
     <Reference Include="System.AppContext, Version=4.1.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>packages\System.AppContext.4.3.0\lib\net463\System.AppContext.dll</HintPath>
       <Private>True</Private>
@@ -894,6 +895,36 @@
     <Compile Include="CONFIGURACION\FrmLogin.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="CONTABILIDAD\FrmConsultaResumen.designer.vb">
+      <DependentUpon>FrmConsultaResumen.vb</DependentUpon>
+    </Compile>
+    <Compile Include="CONTABILIDAD\FrmConsultaResumen.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CONTABILIDAD\FrmPolizaFondoOper.designer.vb">
+      <DependentUpon>FrmPolizaFondoOper.vb</DependentUpon>
+    </Compile>
+    <Compile Include="CONTABILIDAD\FrmPolizaFondoOper.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CONTABILIDAD\FrmPolizaProvRef.designer.vb">
+      <DependentUpon>FrmPolizaProvRef.vb</DependentUpon>
+    </Compile>
+    <Compile Include="CONTABILIDAD\FrmPolizaProvRef.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CONTABILIDAD\FrmPolizaPagoRef.designer.vb">
+      <DependentUpon>FrmPolizaPagoRef.vb</DependentUpon>
+    </Compile>
+    <Compile Include="CONTABILIDAD\FrmPolizaPagoRef.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CONTABILIDAD\FrmPolizaDiesel.designer.vb">
+      <DependentUpon>FrmPolizaDiesel.vb</DependentUpon>
+    </Compile>
+    <Compile Include="CONTABILIDAD\FrmPolizaDiesel.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="CONTABILIDAD\FrmPolizaEgresoDiesel.designer.vb">
       <DependentUpon>FrmPolizaEgresoDiesel.vb</DependentUpon>
     </Compile>
@@ -912,12 +943,6 @@
     <Compile Include="CONTABILIDAD\FrmPolizaGastos.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="CONTABILIDAD\FrmPolizaDiesel.designer.vb">
-      <DependentUpon>FrmPolizaDiesel.vb</DependentUpon>
-    </Compile>
-    <Compile Include="CONTABILIDAD\FrmPolizaDiesel.vb">
-      <SubType>Form</SubType>
-    </Compile>
     <Compile Include="CONTABILIDAD\FrmPolizaIngresosCxC.designer.vb">
       <DependentUpon>FrmPolizaIngresosCxC.vb</DependentUpon>
     </Compile>
@@ -930,13 +955,13 @@
     <Compile Include="CONTABILIDAD\FrmPolizaLiq.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="CONTABILIDAD\FrmConsultaResumen.designer.vb">
-      <DependentUpon>FrmConsultaResumen.vb</DependentUpon>
+    <Compile Include="Ejemplo.vb" />
+    <Compile Include="Form1.Designer.vb">
+      <DependentUpon>Form1.vb</DependentUpon>
     </Compile>
-    <Compile Include="CONTABILIDAD\FrmConsultaResumen.vb">
+    <Compile Include="Form1.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Ejemplo.vb" />
     <Compile Include="INVEN\FrmEsquemasMes.Designer.vb">
       <DependentUpon>FrmEsquemasMes.vb</DependentUpon>
     </Compile>
@@ -4648,6 +4673,21 @@
     <EmbeddedResource Include="CONFIGURACION\FrmLogin.resx">
       <DependentUpon>FrmLogin.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="CONTABILIDAD\FrmConsultaResumen.resx">
+      <DependentUpon>FrmConsultaResumen.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CONTABILIDAD\FrmPolizaFondoOper.resx">
+      <DependentUpon>FrmPolizaFondoOper.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CONTABILIDAD\FrmPolizaProvRef.resx">
+      <DependentUpon>FrmPolizaProvRef.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CONTABILIDAD\FrmPolizaPagoRef.resx">
+      <DependentUpon>FrmPolizaPagoRef.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CONTABILIDAD\FrmPolizaDiesel.resx">
+      <DependentUpon>FrmPolizaDiesel.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CONTABILIDAD\FrmPolizaEgresoDiesel.resx">
       <DependentUpon>FrmPolizaEgresoDiesel.vb</DependentUpon>
     </EmbeddedResource>
@@ -4657,17 +4697,11 @@
     <EmbeddedResource Include="CONTABILIDAD\FrmPolizaGastos.resx">
       <DependentUpon>FrmPolizaGastos.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="CONTABILIDAD\FrmPolizaDiesel.resx">
-      <DependentUpon>FrmPolizaDiesel.vb</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="CONTABILIDAD\FrmPolizaIngresosCxC.resx">
       <DependentUpon>FrmPolizaIngresosCxC.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CONTABILIDAD\FrmPolizaLiq.resx">
       <DependentUpon>FrmPolizaLiq.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="CONTABILIDAD\FrmConsultaResumen.resx">
-      <DependentUpon>FrmConsultaResumen.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="INVEN\FrmEsquemasMes.resx">
       <DependentUpon>FrmEsquemasMes.vb</DependentUpon>
