--- a/SGT Transport/SGT Transport.vbproj
+++ b/SGT Transport/SGT Transport.vbproj
@@ -1010,6 +1010,12 @@
     <Compile Include="INVEN\FrmEsquemasYearMesAE.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="LIQUIDACIONES\FrmReporteCasetas.designer.vb">
+      <DependentUpon>FrmReporteCasetas.vb</DependentUpon>
+    </Compile>
+    <Compile Include="LIQUIDACIONES\FrmReporteCasetas.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="LIQUIDACIONES\FrmPensionAlimenticia.designer.vb">
       <DependentUpon>FrmPensionAlimenticia.vb</DependentUpon>
     </Compile>
@@ -4781,6 +4787,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="INVEN\FrmEsquemasYearMesAE.resx">
       <DependentUpon>FrmEsquemasYearMesAE.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LIQUIDACIONES\FrmReporteCasetas.resx">
+      <DependentUpon>FrmReporteCasetas.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LIQUIDACIONES\FrmPensionAlimenticia.resx">
       <DependentUpon>FrmPensionAlimenticia.vb</DependentUpon>
